--- a/contactus.html
+++ b/contactus.html
@@ -70,20 +70,16 @@
                 <input type="email" placeholder="Enter your Email..." /><br>
                 <button class="submit">Submit</button><br><br>
                 <h3>Follow Us</h3>
-                <div class="icon_container">
-                    <div class="icon">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                    <div class="icon_container">
+                        <div class="icon">
+                          <ul>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                          </ul>
+                        </div>
                     </div>
-                    <div class="icon">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                    </div>
-                    <div class="icon">
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                    </div>
-                    <div class="icon">
-                        <a href="#"><i class="fa fa-youtube"></i></a>
-                    </div>
-                </div>
             </div>
         </div>
     </footer>
