--- a/aboutus.html
+++ b/aboutus.html
@@ -59,18 +59,14 @@
                 <h3>Follow Us</h3>
                 <div class="icon_container">
                     <div class="icon">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                      <ul>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                      </ul>
                     </div>
-                    <div class="icon">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                    </div>
-                    <div class="icon">
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                    </div>
-                    <div class="icon">
-                        <a href="#"><i class="fa fa-youtube"></i></a>
-                    </div>
-                </div>
+                  </div>
             </div>
         </div>
     </footer>
